tests/ui/macros/restricted-shadowing-modern.stderr
error[E0659]: `m` is ambiguous
  --> $DIR/restricted-shadowing-modern.rs:104:17
   |
LL | /  macro include() {
LL | |      #[rustc_macro_transparency = "transparent"]
LL | |      macro gen_outer() {
LL | |          macro m() { Wrong }
...  |
LL | |/             macro gen_gen_inner_invoc() {
LL | ||                 gen_inner!();
LL | ||                 m!();
   | ||                 ^ ambiguous name
LL | ||             }
   | ||_____________- in this expansion of `gen_gen_inner_invoc!` (#2)
LL | |              gen_gen_inner_invoc!();
   | |              ---------------------- in this macro invocation (#2)
...  |
LL | |      }
LL | |  }
   | |__- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `m` could refer to the macro defined here
  --> $DIR/restricted-shadowing-modern.rs:91:9
   |
LL | /   macro include() {
LL | |       #[rustc_macro_transparency = "transparent"]
LL | |       macro gen_outer() {
LL | |           macro m() { Wrong }
...  |
LL | | /     macro gen_inner() {
LL | | |         macro m() { Right }
   | | |         ^^^^^^^^^^^^^^^^^^^
LL | | |     }
   | | |_____- in this expansion of `gen_inner!` (#3)
...  |
LL | | /             macro gen_gen_inner_invoc() {
LL | | |                 gen_inner!();
   | | |                 ------------ in this macro invocation (#3)
LL | | |                 m!();
LL | | |             }
   | | |_____________- in this expansion of `gen_gen_inner_invoc!` (#2)
LL | |               gen_gen_inner_invoc!();
   | |               ---------------------- in this macro invocation (#2)
...  |
LL | |       }
LL | |   }
   | |___- in this expansion of `include!` (#1)
LL |
LL |     include!();
   |     ---------- in this macro invocation (#1)
note: `m` could also refer to the macro defined here
  --> $DIR/restricted-shadowing-modern.rs:99:9
   |
LL | / macro include() {
LL | |     #[rustc_macro_transparency = "transparent"]
LL | |     macro gen_outer() {
LL | |         macro m() { Wrong }
...  |
LL | |         macro m() {}
   | |         ^^^^^^^^^^^^
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `include!`
LL |
LL |   include!();
   |   ---------- in this macro invocation

error[E0659]: `m` is ambiguous
  --> $DIR/restricted-shadowing-modern.rs:147:33
   |
LL | / macro include() {
LL | |     #[rustc_macro_transparency = "transparent"]
LL | |     macro gen_outer() {
LL | |         macro m() { Wrong }
...  |
LL | |             macro gen_invoc() { m!() }
   | |             --------------------^-----
   | |             |                   |
   | |             |                   ambiguous name
   | |             in this expansion of `gen_invoc!` (#2)
LL | |             gen_invoc!();
   | |             ------------ in this macro invocation (#2)
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `include!` (#1)
LL |
LL |   include!();
   |   ---------- in this macro invocation (#1)
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `m` could refer to the macro defined here
  --> $DIR/restricted-shadowing-modern.rs:91:9
   |
LL | /  macro include() {
LL | |      #[rustc_macro_transparency = "transparent"]
LL | |      macro gen_outer() {
LL | |          macro m() { Wrong }
...  |
LL | |/     macro gen_inner() {
LL | ||         macro m() { Right }
   | ||         ^^^^^^^^^^^^^^^^^^^
LL | ||     }
   | ||_____- in this expansion of `gen_inner!` (#2)
...  |
LL | |              gen_inner!();
   | |              ------------ in this macro invocation (#2)
...  |
LL | |      }
LL | |  }
   | |__- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)
note: `m` could also refer to the macro defined here
  --> $DIR/restricted-shadowing-modern.rs:143:9
   |
LL | / macro include() {
LL | |     #[rustc_macro_transparency = "transparent"]
LL | |     macro gen_outer() {
LL | |         macro m() { Wrong }
...  |
LL | |         macro m() {}
   | |         ^^^^^^^^^^^^
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `include!`
LL |
LL |   include!();
   |   ---------- in this macro invocation

error[E0659]: `m` is ambiguous
  --> $DIR/restricted-shadowing-modern.rs:156:13
   |
LL | / macro include() {
LL | |     #[rustc_macro_transparency = "transparent"]
LL | |     macro gen_outer() {
LL | |         macro m() { Wrong }
...  |
LL | |             m!();
   | |             ^ ambiguous name
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `include!`
LL |
LL |   include!();
   |   ---------- in this macro invocation
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `m` could refer to the macro defined here
  --> $DIR/restricted-shadowing-modern.rs:91:9
   |
LL | /  macro include() {
LL | |      #[rustc_macro_transparency = "transparent"]
LL | |      macro gen_outer() {
LL | |          macro m() { Wrong }
...  |
LL | |/     macro gen_inner() {
LL | ||         macro m() { Right }
   | ||         ^^^^^^^^^^^^^^^^^^^
LL | ||     }
   | ||_____- in this expansion of `gen_inner!` (#2)
...  |
LL | |              gen_inner!();
   | |              ------------ in this macro invocation (#2)
...  |
LL | |      }
LL | |  }
   | |__- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)
note: `m` could also refer to the macro defined here
  --> $DIR/restricted-shadowing-modern.rs:153:9
   |
LL | / macro include() {
LL | |     #[rustc_macro_transparency = "transparent"]
LL | |     macro gen_outer() {
LL | |         macro m() { Wrong }
...  |
LL | |         macro m() {}
   | |         ^^^^^^^^^^^^
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `include!`
LL |
LL |   include!();
   |   ---------- in this macro invocation

error[E0659]: `m` is ambiguous
  --> $DIR/restricted-shadowing-modern.rs:172:13
   |
LL | / macro include() {
LL | |     #[rustc_macro_transparency = "transparent"]
LL | |     macro gen_outer() {
LL | |         macro m() { Wrong }
...  |
LL | |             m!();
   | |             ^ ambiguous name
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `include!`
LL |
LL |   include!();
   |   ---------- in this macro invocation
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `m` could refer to the macro defined here
  --> $DIR/restricted-shadowing-modern.rs:91:9
   |
LL | /  macro include() {
LL | |      #[rustc_macro_transparency = "transparent"]
LL | |      macro gen_outer() {
LL | |          macro m() { Wrong }
...  |
LL | |/     macro gen_inner() {
LL | ||         macro m() { Right }
   | ||         ^^^^^^^^^^^^^^^^^^^
LL | ||     }
   | ||_____- in this expansion of `gen_inner!` (#2)
...  |
LL | |              gen_inner!();
   | |              ------------ in this macro invocation (#2)
...  |
LL | |      }
LL | |  }
   | |__- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)
note: `m` could also refer to the macro defined here
  --> $DIR/restricted-shadowing-modern.rs:87:9
   |
LL | /  macro include() {
LL | |      #[rustc_macro_transparency = "transparent"]
LL | |/     macro gen_outer() {
LL | ||         macro m() { Wrong }
   | ||         ^^^^^^^^^^^^^^^^^^^
LL | ||     }
   | ||_____- in this expansion of `gen_outer!` (#2)
...  |
LL | |          gen_outer!();
   | |          ------------ in this macro invocation (#2)
...  |
LL | |      }
LL | |  }
   | |__- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)

error[E0659]: `m` is ambiguous
  --> $DIR/restricted-shadowing-modern.rs:190:17
   |
LL | /  macro include() {
LL | |      #[rustc_macro_transparency = "transparent"]
LL | |      macro gen_outer() {
LL | |          macro m() { Wrong }
...  |
LL | |/             macro gen_gen_inner_invoc() {
LL | ||                 gen_inner!();
LL | ||                 m!();
   | ||                 ^ ambiguous name
LL | ||             }
   | ||_____________- in this expansion of `gen_gen_inner_invoc!` (#2)
LL | |              gen_gen_inner_invoc!();
   | |              ---------------------- in this macro invocation (#2)
...  |
LL | |      }
LL | |  }
   | |__- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `m` could refer to the macro defined here
  --> $DIR/restricted-shadowing-modern.rs:91:9
   |
LL | /   macro include() {
LL | |       #[rustc_macro_transparency = "transparent"]
LL | |       macro gen_outer() {
LL | |           macro m() { Wrong }
...  |
LL | | /     macro gen_inner() {
LL | | |         macro m() { Right }
   | | |         ^^^^^^^^^^^^^^^^^^^
LL | | |     }
   | | |_____- in this expansion of `gen_inner!` (#3)
...  |
LL | | /             macro gen_gen_inner_invoc() {
LL | | |                 gen_inner!();
   | | |                 ------------ in this macro invocation (#3)
LL | | |                 m!();
LL | | |             }
   | | |_____________- in this expansion of `gen_gen_inner_invoc!` (#2)
LL | |               gen_gen_inner_invoc!();
   | |               ---------------------- in this macro invocation (#2)
...  |
LL | |       }
LL | |   }
   | |___- in this expansion of `include!` (#1)
LL |
LL |     include!();
   |     ---------- in this macro invocation (#1)
note: `m` could also refer to the macro defined here
  --> $DIR/restricted-shadowing-modern.rs:87:9
   |
LL | /  macro include() {
LL | |      #[rustc_macro_transparency = "transparent"]
LL | |/     macro gen_outer() {
LL | ||         macro m() { Wrong }
   | ||         ^^^^^^^^^^^^^^^^^^^
LL | ||     }
   | ||_____- in this expansion of `gen_outer!` (#2)
...  |
LL | |          gen_outer!();
   | |          ------------ in this macro invocation (#2)
...  |
LL | |      }
LL | |  }
   | |__- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)

error[E0659]: `m` is ambiguous
  --> $DIR/restricted-shadowing-modern.rs:233:33
   |
LL | / macro include() {
LL | |     #[rustc_macro_transparency = "transparent"]
LL | |     macro gen_outer() {
LL | |         macro m() { Wrong }
...  |
LL | |             macro gen_invoc() { m!() }
   | |             --------------------^-----
   | |             |                   |
   | |             |                   ambiguous name
   | |             in this expansion of `gen_invoc!` (#2)
LL | |             gen_invoc!();
   | |             ------------ in this macro invocation (#2)
LL | |         }
LL | |     }
LL | | }
   | |_- in this expansion of `include!` (#1)
LL |
LL |   include!();
   |   ---------- in this macro invocation (#1)
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `m` could refer to the macro defined here
  --> $DIR/restricted-shadowing-modern.rs:91:9
   |
LL | /  macro include() {
LL | |      #[rustc_macro_transparency = "transparent"]
LL | |      macro gen_outer() {
LL | |          macro m() { Wrong }
...  |
LL | |/     macro gen_inner() {
LL | ||         macro m() { Right }
   | ||         ^^^^^^^^^^^^^^^^^^^
LL | ||     }
   | ||_____- in this expansion of `gen_inner!` (#2)
...  |
LL | |              gen_inner!();
   | |              ------------ in this macro invocation (#2)
...  |
LL | |      }
LL | |  }
   | |__- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)
note: `m` could also refer to the macro defined here
  --> $DIR/restricted-shadowing-modern.rs:87:9
   |
LL | /  macro include() {
LL | |      #[rustc_macro_transparency = "transparent"]
LL | |/     macro gen_outer() {
LL | ||         macro m() { Wrong }
   | ||         ^^^^^^^^^^^^^^^^^^^
LL | ||     }
   | ||_____- in this expansion of `gen_outer!` (#2)
...  |
LL | |          gen_outer!();
   | |          ------------ in this macro invocation (#2)
...  |
LL | |      }
LL | |  }
   | |__- in this expansion of `include!` (#1)
LL |
LL |    include!();
   |    ---------- in this macro invocation (#1)

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0659`.
